# CMakeUtilities

./: LICENSE  README.md
gitUtils/: git-largest-objects.sh  gitGetAuthors.txt
modules/: FindASSIMP.cmake  FindAndroidNDK.cmake  FindCGAL.cmake  FindCholmod.cmake  FindEigen.cmake  FindEmbree.cmake  FindFFmpeg.cmake  FindGLEW.cmake  FindGraphicsMagick.cmake  FindJPEG.cmake  FindLeapMotion.cmake  FindMatlab.cmake  FindOpenImageIO.cmake  FindPNG.cmake  FindSPACEWARE.cmake  FindSixense.cmake  FindSuiteSparse.cmake  FindTIFF.cmake  FindTinyXml.cmake  FindUnity.cmake  FindVRPN.cmake  FindWindowsSDK.cmake
modules/Qt/: Qt5ImportedLocation.cmake
targets/: cmake_install-cluster.cmake.in  cmake_uninstall.cmake.in  make_documentation.cmake  project_install_cluster.cmake  project_uninstall.cmake
targets/doc/: CMakeLists.txt  dateTime.bat  doxyfile.in  doxyfileUpdate.cmake.in
templates/centralizedDependencies/: CMakeLists.txt  ReadMe.txt
templates/centralizedDependencies/cmake/: cmake_policies.cmake  dependencies.cmake
templates/centralizedDependencies/src/: CMakeLists.txt
templates/centralizedDependencies/src/app01/: CMakeLists.txt  main.cpp
templates/centralizedDependencies/src/lib01/: CMakeLists.txt  foo.cpp  foo.h
templates/projectUtilities/: Export.h.in  PackageConfig.cmake.in  ReadMe.txt  UsePackage.cmake.in  exportReadMe.txt.in  project_tools.cmake
utils/: CheckGitSubmodules.cmake  DLWin3rdPartySDK.cmake  GetBuild3rdParty.cmake  MSVCsetUserCommand.cmake  VerboseMessages.cmake  downloadAndExtractZipFile.cmake  find_lib.cmake  install_runtime.cmake  parse_arguments_multi.cmake  systemFilesTools.cmake
